no fixing columns section small (final)-problem

--- a/css/final.css
+++ b/css/final.css
@@ -1,8 +1,8 @@
-/* Articulos de abajo */
+
 
 .small {
     grid-area: small;
-    margin: 5rem 0;
+    margin: 0;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -21,7 +21,7 @@
 .small article h2,
 img,
 p {
-    margin: .5rem 0;
+    margin: 1rem 0;
     width: 70%;
     height: 50%;
     text-align: justify;
@@ -31,7 +31,7 @@ p {
 
 .small article h2{
     text-align: center;
-}
+} 
 
 .footer {
     display: flex;
@@ -43,8 +43,8 @@ p {
    
 }
 
-.footer-left {
-    font-size: 0.9rem;
+.footer-left p {
+    font-size: 18px;
     white-space: nowrap;
 
 }
