--- a/css/medias_queries.css
+++ b/css/medias_queries.css
@@ -7,7 +7,8 @@
         grid-template-rows: auto;
         grid-template-areas: "header header" "main aside" "main aside" 
         "article1 article1" "article2 article2" 
-        "article3 article3"  "gallery gallery" "footer footer";   
+        "article3 article3"  "gallery gallery" "footer footer"; 
+        font-size: 1rem;  
             
     }
 
@@ -16,11 +17,16 @@
         justify-content: space-between;
         background-position: bottom;
         height: 200px; 
+        background-image: url(../assets/lucia.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-size: 30%;
+        background-position: 50% center;
     } 
 
     .header h1 {
-        font-size: 2rem;
-        margin: 0;
+        font-size: 1.5rem;
+        margin: 1rem;
     }
 
     .header p {
@@ -49,7 +55,7 @@
     }
 
     main article {
-        padding: .5rem;
+        padding: .5rem 0 1rem 0 ;
     }
 
     main article img {
@@ -68,7 +74,7 @@
 
     main article>p {
         font-size: 1rem;
-        width: 90%;
+        width: 85%;
 
     }
 
@@ -109,6 +115,13 @@
 
     .small {
         font-size: 55%;
+        
+    }
+
+   
+
+    .ad {
+        height: 250px;
     }
 
     .small article {
@@ -116,23 +129,32 @@
         border-bottom: 1px solid #E3A92B
     }
 
+  
+
     .small article img {
         width: 50%;
         height: 50%;
     }
 
     .footer-right i {
-        font-size: 13px; 
+        font-size: 15px; 
     }
     
     .footer-left  {
-        font-size: 10px; 
+        font-size: px; 
     }
     .footer-right {
         display: flex;
         
            
         }
+    .title  {
+        font-size: 1rem;
+    }
+
+    .list{
+        padding-left: 5rem;
+    }
     }
    
      
