--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('./background.css');
 @import url('./gallery.css');
-
+@import url('./gallery.css');
+@import url('./medias_queries.css');
 
 body {
     margin: 0;
@@ -31,7 +32,7 @@ body {
 }
 
 .header {
-    position: sticky;
+    position: static;
     grid-area: header;
     display: flex;
     flex-direction: column;
